Refs #2275: fixes for global menu level 2, on tablets under 1024px

--- a/cms_frontend/css/mobile.css
+++ b/cms_frontend/css/mobile.css
@@ -126,4 +126,17 @@
   display: block;
   }
 
+  .global-menu.nav-show-level-2 {
+  margin-bottom: 38px;
+  border-bottom: 0;
+  }
+
+  .global-menu.nav-show-level-3 {
+  margin-bottom: 56px;
+  }
+
+  body .global-menu > li > ul .active-trail.dropdown-submenu {
+  background-image: none;
+  }
+
 }
